--- a/src/app/user-onboard/payment-page/payment.component.scss
+++ b/src/app/user-onboard/payment-page/payment.component.scss
@@ -32,6 +32,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center; /* Align items vertically centered */
+  margin-top: 22px;
 }
 
 .payment-details-buttons {
